Novos parceiros, e a adição dos workshops

--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ nav {
 
 .hero {
   height: 100vh;
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./assets/integrantes.PNG');
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./assets/ilumina.png');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -351,6 +351,56 @@ section {
 
 .video-cta .btn i {
   font-size: 1.2rem;
+}
+
+#workshops {
+  padding: 4rem 2rem;
+  text-align: center;
+}
+
+.workshops-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.workshop-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: var(--shadow);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.workshop-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.workshop-card img {
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+}
+
+.workshop-info {
+  padding: 1.5rem;
+  text-align: left;
+}
+
+.workshop-info h3 {
+  font-size: 1.5rem;
+  color: var(--primary-dark);
+  margin-bottom: 0.5rem;
+}
+
+.workshop-info p {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 1rem;
+  line-height: 1.5;
 }
 
 .volunteer-form {
